feat: 카테고리 목록 조회 시 카테고리 아이템 조회 로직 추가