@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,9 +15,9 @@ public class CategoryService {
     private final CategoryRepository categoryRepository;
 
     public List<CategoryResponse> findAll() {
-        return categoryRepository.findAll()
+        return categoryRepository.findAllFetchJoin()
                 .stream()
                 .map(CategoryResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
